fix: naming shift from claim term to datapoint term; code readability/log improvements;

--- a/apps/connect-javascript/styles.css
+++ b/apps/connect-javascript/styles.css
@@ -64,13 +64,13 @@ button {
   border-radius: 2.5em;
 }
 
-.claim-form {
+.datapoint-form {
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
 
-.claim-form label {
+.datapoint-form label {
   box-sizing: border-box;
   color: rgb(102, 102, 102);
   cursor: default;
